<resources>
    <string name="required_fields">Required Fields</string>
    <string name="required_field">Required Field</string>
    <string name="url_username_password_required">Please fill in all of the fields before submitting.</string>
    <string name="categories">Categories</string>
    <string name="select_categories">Select Categories</string>
    <string name="tags_and_categories">Tags &amp; Categories</string>
    <string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
    <string name="post_content">Post Content</string>
    <string name="post_title">Post Title</string>
    <string name="dont_yet_have_a_blog">"Don't yet have a blog?"</string>
    <string name="max_thumbnail_px_width">Default image width</string>
    <string name="password">Password:</string>
    <string name="get_free_blog">Get a free blog at WordPress.com</string>
    <string name="tagline">Start blogging from your mobile in seconds.</string>
    <string name="tagline_tablet">Start blogging from your tablet in seconds.</string>
    <string name="i_have_wp_blog">Add blog hosted at WordPress.com</string>
    <string name="i_have_blog">Add self-hosted WordPress blog</string>
    <string name="new_to_wp">Start a new blog at WordPress.com</string>
    <string name="blogs">Blogs</string>
    <string name="upload_now">Upload Now</string>
    <string name="account_details">Account Details</string>
    <string name="status">Status</string>
    <string name="l_status">Status:</string>
    <string name="app_name">WordPress</string>
    <string name="eula">GNU GENERAL PUBLIC LICENSE</string>
    <string name="about">About</string>
    <string name="username">Username:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="selected_categories">Selected categories:</string>
    <string name="publish">Publish?</string>
    <string name="success">Success</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="hint_menu_to_add_acc">"Select 'Menu' to add another account or to configure comment notifications."</string>
    <string name="add_account">Add Account</string>
    <string name="notification_settings">Settings</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_blink">Blink notification light</string>
    <string name="sure_to_remove_account">Are you sure you want to remove this blog?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account_removed_successfully">Blog removed successfully</string>
    <string name="error">Error</string>
    <string name="could_not_remove_account">Could not remove blog.</string>
    <string name="edit_page">Edit Page</string>
    <string name="getting_page">Getting page</string>
    <string name="please_wait_getting_page">Please wait while attempting to get page (note - pictures will not be loaded)</string>
    <string name="edit_post">Edit Post</string>
    <string name="getting_post">Getting post</string>
    <string name="please_wait_getting_post">Please wait while attempting to get post (note - pictures will not be loaded)</string>
    <string name="no_text_selected">No text selected</string>
    <string name="howto_select_text">You can select text by long pressing in the text area.</string>
    <string name="select_text_to_bold">Please select some text first in order to bold it.</string>
    <string name="select_text_to_link">Please select some text first in order to link it.</string>
    <string name="select_text_to_emphasize">Please select some text in order to emphasize it.</string>
    <string name="select_text_to_blockquote">Please select some text in order to place it in a blockquote.</string>
    <string name="original_size">Original Size</string>
    <string name="refreshing_categories">Refreshing Categories</string>
    <string name="attempting_categories_refresh">Attempting to refresh categories</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_occured">A connection error has occurred. Please try again later.</string>
    <string name="categories_refreshed">Categories refreshed</string>
    <string name="category_refresh_error">Category refresh error</string>
    <string name="settings_not_found">Settings not found</string>
    <string name="settings_not_found_load_now">Some required settings were not found. Load settings now?</string>
    <string name="empty_fields">No Content Found</string>
    <string name="title_post_required">Please enter some post content or attach a media item.</string>
    <string name="post_edited">Post edited</string>
    <string name="post_edited_image_error">Post edited successfully, but an error was encountered when uploading media</string>
    <string name="post_edited_successfully">Post edited successfully</string>
    <string name="attempting_edit_post">Attempting to edit Post</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="sure_to_cancel_edit">Are you sure you want to cancel editing this post?</string>
    <string name="saved_to_local_drafts">Saved to local drafts</string>
    <string name="new_account">New Account</string>
    <string name="upload_full_size_image">Upload and link to full image</string>
    <string name="uploading_content">Uploading Content</string>
    <string name="load_more">Load More</string>
    <string name="load_settings">Load settings now?</string>
    <string name="immediately">Immediately</string>
    <string name="uploading">uploading</string>
    <string name="gallery_error">Sorry, the media item could not be retrieved from the Gallery.</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="no_camera_found">Sorry, no camera was found on your device.</string>
    <string name="more_tag">More</string>
    <string name="wpcom_login_required">Please add a WordPress.com account to use this feature</string>
    <string name="tab_comments">Comments</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_pages">Pages</string>
    <string name="tab_stats">Stats</string>
    <string name="choose_blog">Choose a blog:</string>
    <string name="link_enter_url">Enter a URL:</string>
    <string name="page_content">Page Content</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="page_edited">Page Edited</string>
    <string name="page_edited_image_error">Page edited successfully, but an error was encountered when uploading media</string>
    <string name="page_edited_successfully">Page edited successfully</string>
    <string name="attempting_edit_page">Attempting to edit Page</string>
    <string name="sure_to_cancel_edit_page">Are you sure you want to cancel editing this page?</string>
    <string name="pages_not_found">No Pages Found</string>
    <string name="pages_no_pages">"You don't have any pages on your blog"</string>
    <string name="posts_not_found">No Posts Found</string>
    <string name="posts_no_posts">"You don't have any posts on your blog"</string>
    <string name="untitled">Untitled</string>
    <string name="local_draft">Local Draft</string>
    <string name="local_drafts">Local Drafts</string>
    <string name="post_added">Post Added</string>
    <string name="post_id">Post</string>
    <string name="uploaded_successfully">Uploaded Successfully</string>
    <string name="uploaded_successfully_image_error">added successfully, but an error was encountered when uploading media</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="permalink_not_found">The permalink was not found.</string>
    <string name="basic_html">Showing basic HTML preview until post status is set to published.</string>
    <string name="vp_upgrade">The video was not uploaded due to invalid file type. You can upload videos to your blog using the VideoPress upgrade. Would you like to learn more about VideoPress?</string>
    <string name="post_password">Password (optional)</string>
    <string name="fullscreen">Write in Fullscreen</string>
    <string name="page_id">Page</string>
    <string name="reply_enter">Enter a reply:</string>
    <string name="reply_send">Send Reply</string>
    <string name="reply_to_comment">Reply to Comment</string>
    <string name="reply_required">Required Field</string>
    <string name="reply_please_enter">Please enter something in the reply field.</string>
    <string name="view_comments">View Comments</string>
    <string name="no_approved_comments">There are no approved comments for this post</string>
    <string name="loading">Loading...</string>
    <string name="on">on</string>
    <string name="approved">Approved</string>
    <string name="unapproved">Unapproved</string>
    <string name="spam">Spam</string>
    <string name="moderate_comments">Moderate Comments</string>
    <string name="moderating_comment">Moderating comment</string>
    <string name="moderating_comments">Moderating comments</string>
    <string name="replying_comment">Replying to comment</string>
    <string name="deleting_comment">Deleting comment</string>
    <string name="deleting_comments">Deleting comments</string>
    <string name="comment_moderated">Comment Moderated Successfully</string>
    <string name="comments_moderated">Comments Moderated Successfully</string>
    <string name="reply_added">Reply Added Successfully</string>
    <string name="view_comment_from">Comment from</string>
    <string name="blog_settings">Blog Settings</string>
    <string name="remove_account">Remove Blog</string>
    <string name="blog_removed_successfully">Blog Removed Successfully</string>
    <string name="save_and_exit">Save and Exit Fullscreen</string>
    <string name="exit_without_saving">Exit without Saving</string>
    <string name="draft_actions">Draft Actions</string>
    <string name="edit_draft">Edit Draft</string>
    <string name="upload">Upload Draft to Blog</string>
    <string name="delete_draft">Delete Draft</string>
    <string name="delete_sure">Are you sure you want to delete the draft</string>
    <string name="page_actions">Page Actions</string>
    <string name="preview_page">View Page</string>
    <string name="page_attempt_upload">Attempting to upload page</string>
    <string name="delete_page">Delete Page</string>
    <string name="page_deleted">Page Deleted Successfully</string>
    <string name="delete_sure_page">Are you sure you want to delete the page</string>
    <string name="attempt_delete_page">Attempting to delete page</string>
    <string name="post_actions">Post Actions</string>
    <string name="preview_post">View Post</string>
    <string name="media">Media</string>
    <string name="location">Location</string>
    <string name="geotag">Geotag Posts</string>
    <string name="view_map">View Map</string>
    <string name="update_location">Update Location</string>
    <string name="httpuser">HTTP Username (optional):</string>
    <string name="httppassword">HTTP Password (optional):</string>
    <string name="settings">Settings</string>
    <string name="optional_settings">Optional Settings</string>
    <string name="publish_date">Publish:</string>
    <string name="edit">Edit</string>
    <string name="post_format">Post Format:</string>
    <string name="app_title">WordPress for Android</string>
    <string name="publisher">Publisher: Automattic, Inc</string>
    <string name="copyright">©2011 Automattic, Inc</string>
    <string name="version">Version</string>
    <string name="tos">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="automattic_url"><u>www.automattic.com</u></string>
</resources>