<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="false" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:id="@id/section1" android:background="@drawable/content_bg" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <TextView android:id="@id/l_section1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/post_content" style="@style/WordPressSectionHeader" />
                <EditText android:id="@id/title" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:minHeight="40.0dip" android:hint="@string/title" android:capitalize="sentences" android:autoText="true" android:layout_below="@id/l_section1" />
                <org.wordpress.android.util.WPEditText android:textColorLink="#ff21759b" android:gravity="top" android:id="@id/postContent" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="100.0dip" android:hint="@string/content" android:maxLines="4" android:minLines="4" android:capitalize="sentences" android:autoText="true" android:layout_below="@id/title" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/section3" android:background="@drawable/content_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
                <TextView android:id="@id/l_tags_categories" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="Tags &amp; Categories" style="@style/WordPressSectionHeader" />
                <EditText android:id="@id/tags" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:minHeight="40.0dip" android:hint="@string/tags_separate_with_commas" android:autoText="true" android:layout_below="@id/l_tags_categories" />
                <Button android:textSize="20.0dip" android:id="@id/selectCategories" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_categories" android:layout_below="@id/tags" />
                <TextView android:textColor="#ff444444" android:id="@id/selectedCategories" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/selected_categories" android:layout_below="@id/selectCategories" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/location_wrapper" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="-10.0dip">
                <RelativeLayout android:id="@id/section4" android:background="@drawable/content_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/section3">
                    <TextView android:id="@id/l_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/location" style="@style/WordPressSectionHeader" />
                    <TextView android:id="@id/locationText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/loading" android:layout_below="@id/l_location" />
                    <Button android:textSize="18.0dip" android:id="@id/viewMap" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_map" android:layout_below="@id/locationText" />
                    <Button android:textSize="18.0dip" android:id="@id/updateLocation" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_location" android:layout_toRightOf="@id/viewMap" android:layout_alignTop="@id/viewMap" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/section5" android:background="@drawable/content_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
                <TextView android:id="@id/l_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/settings" style="@style/WordPressSectionHeader" />
                <TextView android:id="@id/statusLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/l_status" android:layout_below="@id/l_status" />
                <Spinner android:id="@id/status" android:background="@drawable/wp_spinner_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/statusLabel" />
                <TextView android:id="@id/pubDateLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="10.0dip" android:text="@string/publish_date" android:layout_below="@id/status" />
                <TextView android:id="@id/pubDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="10.0dip" android:text="@string/immediately" android:layout_toRightOf="@id/pubDateLabel" android:layout_below="@id/status" />
                <Button android:id="@id/pubDateButton" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/edit" android:layout_toRightOf="@id/pubDate" android:layout_below="@id/status" />
                <TextView android:id="@id/postFormatLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="6.0dip" android:text="@string/post_format" android:layout_below="@id/pubDateButton" />
                <Spinner android:id="@id/postFormat" android:background="@drawable/wp_spinner_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/post_format" android:layout_below="@id/postFormatLabel" />
                <EditText android:id="@id/post_password" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:minHeight="40.0dip" android:hint="@string/post_password" android:password="true" android:autoText="true" android:layout_below="@id/postFormat" />
            </RelativeLayout>
            <Button android:textSize="20.0dip" android:id="@id/post" android:background="@drawable/wp_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_below="@id/section5" android:layout_alignParentRight="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>