<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/about" android:background="@drawable/dashboard_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/about_wp_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/wp_logo_home" />
        <TextView android:textSize="25.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_first_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_title" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <TextView android:textSize="18.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version" />
        <TextView android:textSize="18.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_second_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/publisher" />
        <TextView android:textSize="18.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_third_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copyright" />
        <Button android:textSize="18.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_tos" android:background="@drawable/wp_button" android:layout_width="220.0dip" android:layout_height="40.0dip" android:layout_marginTop="40.0dip" android:text="@string/tos" />
        <Button android:textSize="18.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_privacy" android:background="@drawable/wp_button" android:layout_width="220.0dip" android:layout_height="40.0dip" android:text="@string/privacy_policy" android:layout_below="@id/about_tos" />
        <TextView android:textSize="18.0dip" android:layout_gravity="center_horizontal" android:id="@id/about_url" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/automattic_url" android:onClick="onClick" />
    </LinearLayout>
</ScrollView>