<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/settings" android:background="#fff5f5f5" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#fff5f5f5" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:gravity="left" android:id="@id/wpcomLogo" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/wpcom" android:scaleType="centerInside" />
        <RelativeLayout android:id="@id/section1" android:background="@drawable/content_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/wpcomLogo">
            <TextView android:id="@id/l_section1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_details" style="@style/WordPressSectionHeader" />
            <RelativeLayout android:id="@id/urlWrapper" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/l_section1">
                <TextView android:textColor="#ff444444" android:id="@id/l_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Blog URL:" android:layout_below="@id/urlWrapper" />
                <EditText android:id="@id/url" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:layout_below="@id/l_url" android:inputType="textUri" />
            </RelativeLayout>
            <TextView android:textColor="#ff444444" android:id="@id/l_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/username" android:layout_below="@id/urlWrapper" />
            <EditText android:id="@id/username" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:singleLine="true" android:layout_below="@id/l_username" />
            <TextView android:textColor="#ff444444" android:id="@id/l_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/password" android:layout_below="@id/username" />
            <EditText android:id="@id/password" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:minHeight="40.0dip" android:password="true" android:singleLine="true" android:layout_below="@id/l_password" />
            <Button android:id="@id/settingsButton" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/optional_settings" android:layout_below="@id/password" />
            <Button android:id="@id/save" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/save" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_below="@id/settingsButton" android:layout_alignParentRight="true" />
            <Button android:id="@id/cancel" android:background="@drawable/wp_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_toLeftOf="@id/save" android:layout_alignTop="@id/save" />
        </RelativeLayout>
        <TextView android:textColor="#ff444444" android:id="@id/l_wordpressdotcom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/dont_yet_have_a_blog" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_below="@id/section1" android:layout_centerHorizontal="true" />
        <Button android:id="@id/wordpressdotcom" android:background="@drawable/wp_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_free_blog" android:layout_below="@id/l_wordpressdotcom" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>