<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:id="@id/replyLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/reply_enter" />
    <EditText android:id="@id/replyText" android:background="@android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:minHeight="40.0dip" android:maxLines="4" android:minLines="2" android:capitalize="sentences" android:autoText="true" android:layout_below="@id/replyLabel" />
    <Button android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/reply_send" android:layout_below="@id/replyText" android:layout_alignParentRight="true" />
    <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_toLeftOf="@id/ok" android:layout_alignTop="@id/ok" />
</RelativeLayout>